data/derived/comb/progs/unify/prog3337.ml.out
Characters 76-77:
  wwhile (g,x);;
          ^
Error: This expression has type 'a -> ('b -> 'a) * bool
       but an expression was expected of type 'a -> 'a * bool
       The type variable 'a occurs inside 'b -> 'a
